[package]
name = "byteflags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/skyline-rs/rand.git" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
