[package]
name = "byteflags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[features]
rand = ["dep:rand"]

[package.metadata.docs.rs]
all-features = true
